<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="notification_edit_hint">Insert your message here</string>
    <string name="send_notification_button">Send Notification</string>
    <string name="get_data_button">Get</string>
    <string name="send_data_button">New</string>
    <string name="delete_button">Delete</string>

</resources>
